--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,27 +19,27 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Add source files - CORRIGIDO: arquivos estão na raiz
+# Add source files - CORRETO: arquivos estão na pasta dnapass_password_generator
 set(SOURCE_FILES
-    dnapass_generator.cpp
-    main.cpp
+    dnapass_password_generator/dnapass_generator.cpp
+    dnapass_password_generator/main.cpp
 )
 
 # Add executable
 add_executable(dnapass_generator ${SOURCE_FILES})
 
-# Include header files - CORRIGIDO: headers estão na raiz
-target_include_directories(dnapass_generator PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+# Include header files - CORRETO: headers estão na pasta dnapass_password_generator
+target_include_directories(dnapass_generator PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dnapass_password_generator)
 
 # Set compiler-specific flags
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     target_compile_options(dnapass_generator PRIVATE -Wall -Wextra -Wpedantic)
 endif()
 
-# Installation rules (optional, for installing the executable)
+# Installation rules (optional)
 install(TARGETS dnapass_generator DESTINATION bin)
 
-# Add custom message for build completion - CORRIGIDO: versão atualizada
+# Add custom message for build completion
 add_custom_command(TARGET dnapass_generator POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E echo "DNAPass Password Generator v${PROJECT_VERSION} built successfully!"
 )
