--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "https://gerivan.me/g1.png",
+      "src": "https://dnapass.gerivan.me/g1.png",
       "sizes": "960x960",
       "type": "image/png"
     }
@@ -24,7 +24,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "https://gerivan.me/g2.png",
+      "src": "https://dnapass.gerivan.me/g2.png",
       "sizes": "960x960",
       "type": "image/png"
     }	
